package blackhole;

option java_package = "com.dp.blackhole.protocol.control";
option java_outer_classname = "RetireConsumerGroupPB";

message RetireConsumerGroup {
    required string topic = 1;
    required string groupId = 2;
}